dnl
dnl dnstracer configure.in. Scary... very scary.
dnl
dnl autoscan && aclocal && autoheader && autoconf && automake
dnl rm -rf Makefile autom4te.cache autoscan.log config.h config.h.in~ 
dnl rm -rf config.log config.status configure.scan stamp-*
dnl

AC_INIT(dnstracer.c)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(dnstracer,1.7)

AC_PROG_CC
AC_PROG_INSTALL
AC_C_BIGENDIAN

AC_ARG_ENABLE(
	ipv6,
	[  --disable-ipv6          Disable IPv6 support],
	[
	 case "${enableval}" in
		yes) ipv6=true;;
		no) echo "Disabling support for IPv6 queries"
		    ipv6=false;;
		*) AC_MSG_ERROR(bad value ${enableval} for --enable-ipv6) ;;
	 esac],
	[ipv6=yes]
)
AM_CONDITIONAL(NOIPV6,test x$ipv6 = xfalse)

AC_CHECK_FUNC(inet_ntoa, [], AC_CHECK_LIB(resolv, inet_ntoa))
AC_CHECK_FUNC(socket, [], AC_CHECK_LIB(socket, socket))
AC_CHECK_FUNC(gethostbyname, [], AC_CHECK_LIB(nsl, gethostbyname))

AC_HEADER_STDC
AC_HEADER_TIME
AC_CHECK_HEADERS([arpa/inet.h netdb.h netinet/in.h stdlib.h string.h sys/param.h sys/socket.h sys/time.h unistd.h resolv.h])

AC_CHECK_FUNCS([gethostbyname inet_ntoa inet_pton memset select socket strcasecmp strchr strdup])

AC_OUTPUT(Makefile)
